feat: make HW tasks

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@wdio/browserstack-service": "^7.16.11",
     "@wdio/cucumber-framework": "^7.16.6",
+    "allure-commandLine": "npm:allure-commandline@^2.17.2",
     "faker": "^5.5.3",
     "yaml": "^1.10.2"
   }
